--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.3",
+    "emailjs-com": "^2.6.4",
     "firebase": "^8.2.2",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
