--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-scroll": "^1.8.1",
+    "react-spring": "^8.0.27",
     "react-toastify": "^6.2.0",
     "react-typical": "^0.1.3",
     "styled-components": "^5.2.1"
